# clustering_emulator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
clustering_emulator/: __init__.py  compute_correlation.py  corr_from_sim.py  data_loader_simulation.py  halomod_vs_simulation_comparison.py  paths.py  two_halo_correlation.py
scripts/: compare_wp_integration.py  compare_xi_vol_integration.py  plot_powerlaw_xi_wp.py  two_halo_vs_halomod_mass_thresholds.py
